--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
 <head>
-  <h1> Welcome Back!!!!!</h1>
 </head>
 <body>
+    <h1> Welcome Back!!!!!</h1>
+    <a href="donow.html">prompt and alert donow</a>
+    <a href="hwbob.html">head or tails game</a>
+    <a href="hwadventure.html">story game</a>
+    <a href="math.html">random math game</a>
+    <a href="morsecode.html">morse code translator</a>
+    <a href="helloworld.html">helloworld alert exercise</a>
+    <a href="rps.html">Rock, Paper, Scissors game</a>
+    <!-- todo finish this-->
 </body>
 </html>
