finished homework and made progress on homepage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="morsecode.html">morse code translator</a>
     <a href="helloworld.html">helloworld alert exercise</a>
     <a href="rps.html">Rock, Paper, Scissors game</a>
+    <a href="homework1p2.html">Homework week 1 P2</a>
     <!-- todo finish this-->
 </body>
 </html>
