--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="helloworld.html">helloworld alert exercise</a>
     <a href="rps.html">Rock, Paper, Scissors game</a>
     <a href="homework1p2.html">Homework week 1 P2</a>
+    <a href="madlib.html">madlin</a>
     <!-- todo finish this-->
 </body>
 </html>
