--- a/madlib.html
+++ b/madlib.html
@@ -1,15 +1,18 @@
 <html>
 <head>
 <script>
-  var madlib = prompt("Who is your friend?")
+function mystory(){
+  var friend = prompt("Who is your friend?")
   var food = prompt("What is your favorite food?")
   var place = prompt("Where are you from?")
   var ckn = prompt("Do you eat chicken?")
   var al = prompt("What is a flying creature?")
-  alert("I met " + madlib + " in a " + food + " place. I ate " + place + " with a side of the answer " + ckn + ". I fly on " + al + "s in my sleep.")
+  alert("I met " + friend + " in a " + food + " place. I ate " + place + " with a side of the answer " + ckn + ". I fly on " + al + "s in my sleep.")
+}
 
 </script>
 </head>
 <body>
+  <button onclick="mystory()">Start The Story</button>
 </body>
 </html>
