finished  homework from week 4

--- a/helloworld.html
+++ b/helloworld.html
@@ -1,12 +1,15 @@
 <html>
 <head>
 <script>
-var numtimescalled = 0
+// resets/starts at zero
+var numTimesCalled = 0
 function helloworld() {
+  // tell the user hi
   alert("Hello NHA")
-  return numtimescalled = numtimescalled + 1
+  // add 1 to the number
+  return numTimesCalled = numTimesCalled + 1
 }
-
+// assigns return value to variable r
 var r = helloworld()
 r = helloworld()
 r = helloworld()
