--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <a href="helloworld.html">helloworld alert exercise</a>
     <a href="rps.html">Rock, Paper, Scissors game</a>
     <a href="homework1p2.html">Homework week 1 P2</a>
-    <a href="madlib.html">madlin</a>
+    <a href="madlib.html">madlib</a>
+    <a href="weather.html">homemade weather site</a>
     <!-- todo finish this-->
 </body>
 </html>
